Added semester selection buttons
There are quite a lot of semesters one can select from in my Uni's Stud.IP, so it becomes a rather inconvenient to select the right one; however, one often only wants to skip just one semester into the past or future, which is simplified through these buttons.

--- a/app/src/main/res/layout/fragment_courses.xml
+++ b/app/src/main/res/layout/fragment_courses.xml
@@ -6,16 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.CoursesFragment">
 
+    <ImageButton
+        android:id="@+id/semester_previous"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/go_left"
+        app:layout_constraintBottom_toTopOf="@+id/courses_refresh"
+        app:layout_constraintEnd_toStartOf="@+id/semester_select"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Spinner
         android:id="@+id/semester_select"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/semester_next"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/semester_previous"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/courses_refresh"
@@ -26,13 +40,17 @@
         android:layout_marginEnd="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/semester_select">
+        app:layout_constraintTop_toBottomOf="@+id/semester_select"
+        app:layout_constraintVertical_bias="0.0">
 
         <ListView
             android:id="@+id/courses_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+        </ListView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <TextView
@@ -43,5 +61,20 @@
         android:layout_marginTop="8dp"
         android:text="@string/semester_select"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/semester_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="0dp"
+        android:src="@drawable/go_right"
+        android:text="Button"
+        app:layout_constraintBottom_toTopOf="@+id/courses_refresh"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/semester_select"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
